MacBook Finalizado, Inicio de Airpods

--- a/ds1t-a/Luiz Gustavo/index.html
+++ b/ds1t-a/Luiz Gustavo/index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="/css/inicio.css">
     <link rel="stylesheet" href="/css/iphone.css">
     <link rel="stylesheet" href="/css/ipad.css">
+    <link rel="stylesheet" href="/css/mac.css">
+    <link rel="stylesheet" href="/css/airpods-watch.css">
+    <link rel="stylesheet" href="/css/title.css">
+    <link rel="stylesheet" href="/css/text.css">
+    <link rel="stylesheet" href="/css/button.css">
     <title>One Page</title>
 </head>
 
@@ -64,7 +69,9 @@
             <div class="main-home">
                 <div class="home-text">
                     <h1 class="title-apple">Apple</h1>
-                    <p class="text-apple">É uma empresa multinacional norte-americana que tem o objetivo de projetar e comercializar produtos eletrônicos de consumo, software de computador e computadores pessoais. Os produtos de hardware mais conhecidos da empresa incluem
+                    <p class="text-apple">É uma empresa multinacional norte-americana que tem o objetivo de projetar e
+                        comercializar produtos eletrônicos de consumo, software de computador e computadores pessoais.
+                        Os produtos de hardware mais conhecidos da empresa incluem
                         a linha de computadores Macintosh, iPod, iPhone, iPad, Apple TV e o Apple Watch.
                     </p>
                 </div>
@@ -83,35 +90,83 @@
                 <p class="text-button">
                     IPhone 14 pro o mais potente e tecnologico atualmente, clique no botão e veja:
                 </p>
-                <a href="https://www.apple.com/br/iphone-14-pro/" class="button-iphone">Clique Aqui</a>
+                <a href="https://www.apple.com/br/iphone-14-pro/" class="button-iphone-mac">Clique Aqui</a>
             </div>
             <div class="main-right">
-                <h1 class="title-iphone">IPhone</h1>
-                <p class="text-iphone">
-                    iPhone é uma linha de smartphones desenvolvidos e comercializados pela Apple Inc. É o único smartphone a operar com o sistema operacional móvel iOS. A primeira geração do iPhone foi lançada em 29 de junho de 2007, desde então, a Apple lançou novos modelos
-                    anualmente sendo o iPhone 14, iPhone 14 Plus, iPhone 14 Pro e iPhone 14 Pro Max os modelos mais recentes. A linha ‘14’ do iPhone foi anunciada em 7 de setembro de 2022 na conferência anual da Apple, transmitida na Apple Park, em Cupertino.
+                <h1 class="title">IPhone</h1>
+                <p class="text">
+                    iPhone é uma linha de smartphones desenvolvidos e comercializados pela Apple Inc. É o único
+                    smartphone a operar com o sistema operacional móvel iOS. A primeira geração do iPhone foi lançada em
+                    29 de junho de 2007, desde então, a Apple lançou novos modelos
+                    anualmente sendo o iPhone 14, iPhone 14 Plus, iPhone 14 Pro e iPhone 14 Pro Max os modelos mais
+                    recentes. A linha ‘14’ do iPhone foi anunciada em 7 de setembro de 2022 na conferência anual da
+                    Apple, transmitida na Apple Park, em Cupertino.
                 </p>
                 <img src="/img/IPHONE 14 PRO.png" alt="iphone14" class="iphone14">
             </div>
         </section>
         <section class="section-ipad" id="ipad">
-            <h1 class="title-ipad">IPad</h1>
+            <h1 class="title">IPad</h1>
             <div class="main-ipad">
-                <p class="text-ipad">
-                    A linha iPad Pro compreende os tablets estado-da-arte da Apple. Estes contam com telas de 11 e 12,9 polegadas, tecnologia True Tone e taxa de atualização de 120 Hz (que a Apple chama de ProMotion), o poderoso processador exclusivo Apple A12X Bionic, mais
+                <p class="text">
+                    A linha iPad Pro compreende os tablets estado-da-arte da Apple. Estes contam com telas de 11 e 12,9
+                    polegadas, tecnologia True Tone e taxa de atualização de 120 Hz (que a Apple chama de ProMotion), o
+                    poderoso processador exclusivo Apple A12X Bionic, mais
                     RAM (4 ou 6 GB), e um corpo com bordas finas e sem botão Home.
                 </p>
                 <img src="/img/ipad.png" alt="ipad" class="img-ipad">
             </div>
             <div class="ipad-pro">
-                <p class="text-ipad-button">
+                <p class="text-button">
                     IPad pro o mais potente e tecnologico atualmente veja:
                 </p>
-                <a href="https://www.apple.com/br/iphone-14-pro/" class="button-ipad">Clique Aqui</a>
+                <a href="https://www.apple.com/br/iphone-14-pro/" class="button-ipad-airpos-watch ">Clique Aqui</a>
             </div>
         </section>
-        <section class="section-mac" id="mac"></section>
-        <section class="section-airpods-watch" id="airpods-watch"></section>
+        <section class="section-mac" id="mac">
+            <h1 class="title">MacBook</h1>
+            <div class="main-mac">
+                <div class="main-left">
+                    <p class="text">
+                        Atualmente a apple conta com 3 versões da sua linha desktop, o IMac, AirMac e o Mac. Sendo o
+                        AirMac como se fosse um notebook,
+                        o mac uma computador padrão não tem monitor outro tipo de periférico embutido e o IMac é um
+                        computador embutido em um monitor
+                        de alta qualidade e de tamanho a partir de 24 polegadas.
+                    </p>
+                    <img src="/img/VERSÕES MAC's.png" alt="macs" class="macs">
+                </div>
+                <div class="main-right">
+                    <img src="/img/MacBook Pro.png" alt="mac-pro" class="mac-pro">
+                    <p class="text">
+                        O desktop mais atual é o Macbook pro, Os dois podem ser configurados com o chip M1 Pro ou o M1
+                        Max
+                        e oferecem um desempenho profissional incomparável. Veja no clicando no botão:
+                    </p>
+                    <a href="https://www.apple.com/br/iphone-14-pro/" class="button-iphone-mac">Clique Aqui</a>
+                </div>
+            </div>
+        </section>
+        <section class="section-airpods-watch" id="airpods-watch">
+            <div class="airpods">
+                <h1 class="title">Airpods</h1>
+                <div class="main-airpods">
+                    <p class="text-airpods">
+                        AirPods é uma linha de fones bluetooth desenvolvidos pela Apple.
+                        A primeira geração foi lançada em setembro de 2016 e a sua segunda geração em março de 2019.
+                    </p>
+                    <div class="airpods-pro">
+                        <img src="/img/AirPods Pro.png" alt="airpods" class="airpods-pro">
+                        <p class="text-button-airpods">Clique no botão e vejo o mais atual, o Airpos Pro:</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="watch">
+                <h1 class="title">Apple Watch</h1>
+
+            </div>
+        </section>
         <section class="section-contato" id="contato"></section>
     </main>
 </body>
