--- a/ds1t-a/Luiz Gustavo/index.html
+++ b/ds1t-a/Luiz Gustavo/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;800&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/MAÇÃ.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/menu.css">
@@ -13,10 +14,11 @@
     <link rel="stylesheet" href="/css/iphone.css">
     <link rel="stylesheet" href="/css/ipad.css">
     <link rel="stylesheet" href="/css/mac.css">
-    <link rel="stylesheet" href="/css/airpods-watch.css">
+    <link rel="stylesheet" href="/css/airpods.css">
     <link rel="stylesheet" href="/css/title.css">
     <link rel="stylesheet" href="/css/text.css">
     <link rel="stylesheet" href="/css/button.css">
+    <link rel="stylesheet" href="/css/watch.css">
     <title>One Page</title>
 </head>
 
@@ -148,8 +150,10 @@
             </div>
         </section>
         <section class="section-airpods-watch" id="airpods-watch">
+            <div class="div-title">
+                <h1 class="title-airpod">Airpods</h1>
+            </div>
             <div class="airpods">
-                <h1 class="title">Airpods</h1>
                 <div class="main-airpods">
                     <p class="text-airpods">
                         AirPods é uma linha de fones bluetooth desenvolvidos pela Apple.
@@ -160,11 +164,13 @@
                         <p class="text-button-airpods">Clique no botão e vejo o mais atual, o Airpos Pro:</p>
                     </div>
                 </div>
+                <a href="https://www.apple.com/br/iphone-14-pro/" class="button-ipad-airpos-watch ">Clique Aqui</a>
 
             </div>
-            <div class="watch">
+            <div class="div-title-wacth">
                 <h1 class="title">Apple Watch</h1>
-
+            </div>
+            <div class="watch"></div>
             </div>
         </section>
         <section class="section-contato" id="contato"></section>
