section contatos concluida

--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -90,27 +90,32 @@
         <section class="criadores" id="criadores"></section>
         <section class="contatos" id="contatos">
             <p class="titulo-contatos">Contatos</p>
-            <container class="informacoes">
+            <div class="informacoes">
                 <div class="texto-informacoes">
                     <li class="info-item">
-                        <div>
-                            <i class="fas fa-envelope" aria-hidden="true"></i>
-                            <span>mateusalves5942@gmail.com</span>
-                        </div>
+                        <img class="imagem-vetor" src="./img/Vetor-email.png" alt="email">
+                        <span class="texto-vetor">mateusalves5942@gmail.com</span>
                     </li>
-                    <li class="info-item"></li>
-                    <li class="info-item"></li>
-                    <li class="info-item"></li>
+                    </li>
+                    <li class="info-item">
+                            <img class="imagem-vetor" src="./img/Vetor-insta.png" alt="email">
+                            <span class="texto-vetor">mateus_alves595</span>
+                    </li>
+                    <li class="info-item">
+                            <img class="imagem-vetor" src="./img/Vetor-git.png" alt="email">
+                            <span class="texto-vetor">MateusAlves595</span>
+                    </li>
+                    <li class="info-item">
+                            <img class="imagem-vetor" src="./img/Vetor-whatsapp.png" alt="email">
+                            <span class="texto-vetor">(11) 95987-5844</span>
+                    </li>
+                   
                 </div>
-                <div class="imagem-contatos">
-                    <img src="./img/Imagem ff 1.png" alt="imagem-contato">
-            </container>
+                <img class="imagem-informacoes" src="./img/Imagem ff 1.png" alt="imagem-contato">
             </div>
         </section>
     </main>
-    <footer>
-        Todos os direitos reservados 2022 | Desenvolvido por Mateus Alves
-    </footer>
+    <footer>Todos os direitos reservados 2022 | Desenvolvido por Mateus Alves</footer>
 </body>
 
 </html>
