--- a/ds1t-a/juliaSoares/index.html
+++ b/ds1t-a/juliaSoares/index.html
@@ -54,6 +54,8 @@
             <p class="button-historia">
                 <a class="button_text" href="https://www.starbucksathome.com/br/sobre-starbucks">Leia a História</a>
             </p>
+            <img src="./img/e-book.png" alt="imagem-livrinho" class="livro-img">
+            <p class="texto-leitura">3 min de leitura</p>
         </section>
         <section class="niveis-de-torra ">Níveis de torra</section>
         <section class="menu ">Menu</section>
