--- a/ds1t-b/yasmin/index.html
+++ b/ds1t-b/yasmin/index.html
@@ -63,6 +63,21 @@
                 <h3 class="destinos__title">Encontre destinos populares!</h3>
                 <p class="destinos__description">Os melhores destinos e com os melhores preços, você só encontra na TRVLS.</p> 
             </div>
+            <div class="destinos__lugares">
+                <div class="arraial">
+                    <img src="./img/arraial.png" alt="Arraial do cabo">
+                    <p>Arraial do Cabo, RJ</p>
+                </div>
+                <div class="lencois">
+                    <p>Lençóis Maranhenses, MA</p>
+                    <img src="./img/lencois.png" alt="Lençóis Maranhenses">
+                    
+                </div>
+                <div class="cataratas">
+                    <img src="./img/cataratas.png" alt="Cataratas do Iguaçu">
+                    <p>Cataratas do Iguaçu, PR</p>
+                </div>
+            </div>
         </section>
 
         <section class="avaliacoes" id="avaliacoes"></section>
