--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="producao.css">
     <link rel="stylesheet" href="criadores.css">
     <link rel="stylesheet" href="contatos.css">
+    <link rel="stylesheet" href="criadores.css">
     <title>Final Fantasy VII</title>
 </head>
 
@@ -87,7 +88,39 @@
         </section>
         <section class="personagens" id="personagens"></section>
         <section class="producao" id="producao"></section>
-        <section class="criadores" id="criadores"></section>
+        <section class="criadores" id="criadores">
+            <div class="titulo-criadores">
+                <p class="titulo">Criadores</p>
+            </div>
+            <div class="container-criadores">
+                <div class="quadrado-criadores">
+                    <div class="primeira-div">
+                        <div class="criador">
+                            <img class="imagem-criador" src="./img/Imagem-Yoshinori.png" alt="yoshinori">
+                            <p class="nome-criador">Yoshinori Kitase</p>
+                        </div>
+                        <div class="criador">
+                            <img class="imagem-criador" src="./img/Imagem-Hironobu.png" alt="hironobu">
+                            <p class="nome-criador">Hironobu Sakaguchi</p>
+                        </div>
+                        <div class="criador">
+                            <img class="imagem-criador" src="./img/Imagem-Tetsuya.png" alt="tetsuya">
+                            <p class="nome-criador">Tetsuya Nomura</p>
+                        </div>
+                    </div>
+                    <div class="segunda-div">
+                        <div class="criador">
+                            <img class="imagem-criador" src="./img/Imagem-Kazushige.png" alt="kazushige">
+                            <p class="nome-criador">Kazushige Nojima</p>
+                        </div>
+                        <div class="criador">
+                            <img class="imagem-criador" src="./img/Imagem-Nobuo.png" alt="nobuo">
+                            <p class="nome-criador">Nobuo Uematsu</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="contatos" id="contatos">
             <p class="titulo-contatos">Contatos</p>
             <div class="informacoes">
