Section Smartwatch feito

--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/tab.css">
+    <link rel="stylesheet" href="./css/smartwatch.css">
 </head>
 
 <body>
@@ -91,6 +92,28 @@
         <div class="tab-promotion-container">
             <img src="./img/tab-image.png" alt="Imagem promocial tab">
             <a href="#" class="button-promotion-comprar">Comprar</a>
+        </div>
+    </section>
+    <section class="section-smartwatch">
+        <div class="smartwatch-title-container">
+            <h1 class="smartwatch-title">Smartwatch</h1>
+        </div>
+        <div class="smartwatch-text-container1">
+            <p class="smartwatch-text">
+                Quer levar a
+                modernidade 
+                consigo?
+            </p>
+        </div>
+        <div class="smartwatch-promotion-container">
+            <img src="./img/smartwatch-image.png" alt="Imagem promocional watch4">
+            <a href="#" class="button-promotion-comprar">Comprar</a>
+        </div>
+        <div class="smartwatch-text-container2">
+            <p class="smartwatch-text">
+                Com o watch4
+                você consegue!
+            </p>
         </div>
     </section>
 </body>
