styling few things

--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -489,21 +489,25 @@
           <div class="topic-social-networks">
             <h3 class="topic__title">REDES SOCIAIS</h3>
             <ul class="social-networks-container">
-              <li
-                onclick="goToInstagram()"
-                id="instagram"
-                class="social-network"
-              >
-                <img src="./img/instagram.png" alt="Instagram" />
+              <li class="social-network">
+                <a href="https://www.instagram.com"
+                  ><img src="./img/instagram.png" alt="Instagram"
+                /></a>
               </li>
-              <li onclick="goToFacebook()" id="facebook" class="social-network">
-                <img src="./img/facebook.png" alt="Facebook" />
+              <li class="social-network">
+                <a href="https://www.facebook.com"
+                  ><img src="./img/facebook.png" alt="Facebook"
+                /></a>
               </li>
-              <li onclick="goToTwitter()" id="twitter" class="social-network">
-                <img src="./img/twitter.png" alt="Twitter" />
+              <li class="social-network">
+                <a href="https://www.twitter.com"
+                  ><img src="./img/twitter.png" alt="Twitter"
+                /></a>
               </li>
-              <li onclick="goToLinkedin()" id="linkedin" class="social-network">
-                <img src="./img/linkedin.png" alt="Linkedin" />
+              <li class="social-network">
+                <a href="https://www.linkedin.com"
+                  ><img src="./img/linkedin.png" alt="Linkedin"
+                /></a>
               </li>
             </ul>
           </div>
