Section informações feito

--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/16a1966fca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/reset.css">
@@ -19,6 +20,7 @@
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/tab.css">
     <link rel="stylesheet" href="./css/smartwatch.css">
+    <link rel="stylesheet" href="./css/informacoes.css">
 </head>
 
 <body>
@@ -114,6 +116,28 @@
                 Com o watch4
                 você consegue!
             </p>
+        </div>
+    </section>
+    <section class="section-informacoes">
+        <div class="informacoes-title-container">
+            <h1 class="informacoes-title">Informações</h1>
+        </div>
+        <div class="informacoes-criador-container">
+            <p class="criador-text">Criador:</p>
+            <img src="./img/criador-image.png" alt="Imagem do criador">
+            <p class="criador-text">André Luiz</p>
+            <div class="icons-container">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-facebook"></i>
+            </div>
+        </div>
+        <div class="informacoes-contato-container">
+            <p class="contato-text">Contato:</p>
+            <i class="fa-solid fa-phone"></i>
+            <p class="contato-text">(11) 97049-3172</p>
+            <i class="fa-solid fa-envelope"></i>
+            <p class="contato-text">andreluis081205@gmail.com</p>
         </div>
     </section>
 </body>
